# subscriberRegistry

./: .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.am  Makefile.common  SubscriberRegistry.cpp  SubscriberRegistry.h  config.h  configure.ac  regs.gawk  regs.sh  servershare.cpp  servershare.h  sipauthserve.cpp  sipauthserve.example.sql  srmanager.cpp
Globals/: Globals.cpp  Globals.h  GrabRepoInfo.sh  Makefile.am
apps/: Makefile.am  checkdb.sh  sipauthserve.conf  sipauthserve.cpp  sipauthserve.example.sql  subscriberRegistry.example.sql
configFiles/: subscriberRegistryInit.sql
debian/: changelog  control  dirs  links  postinst  prerm  rules
package/: after-install-deb.sh  after-install-rpm.sh  build.sh  inputs  pre-uninstall.sh
sqlite3/: .gitignore
test.SubscriberRegistry/: test.cpp  test.db.init1
test.sipauthserve/: sipauthserve.db.init
